Improve test with exceptions